# HashTableBenchmark

./: .gitmodules  CMakeLists.txt  Readme.md
LoadFactors/: Checksum.csv  ChecksumShort.csv  Crc32.csv  FirstLetter.csv  NormalizedChecksum.csv  OnlyZero.csv  Ror.csv  WordLength.csv
TextTransformer/: TextTransformer.py  text.txt  text_out.txt
include/: Config.hpp  DataExporter.hpp  ErrorCodes.hpp  FileReader.hpp  GetList.hpp  Hashes.hpp  WordData.hpp  WordsComparator.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  DataExporter.cpp  FileReader.cpp  StreqFast.s  main.cpp
